# youtube-channel-agent

./: .env.example  .gitignore  CLAUDE.md  Makefile  README.md  catalog-info.yaml  mkdocs.yml  notes.txt  pyproject.toml
.github/workflows/: ci.yml
docs/: architecture.html  index.md
src/yt_agent/: __init__.py  agent.py  cli.py  config.py  exceptions.py
src/yt_agent/agent/: __init__.py  models.py  orchestrator.py  presenter.py
src/yt_agent/auth/: __init__.py  oauth.py
src/yt_agent/llm/: __init__.py  base.py  claude.py  factory.py  openai.py
src/yt_agent/seo/: __init__.py  optimizer.py
src/yt_agent/tools/: __init__.py  base.py  drive.py  transcribe.py  youtube.py
src/yt_agent/tools/youtube/: __init__.py  _channel.py  _models.py  _playlist.py  _video.py
src/yt_agent/utils/: __init__.py  prompts.py  scheduler.py
src/yt_agent/web/: __init__.py  app.py
src/yt_agent/web/templates/: index.html
tests/: __init__.py
tests/unit/: test_config.py  test_llm_factory.py  test_scheduler.py  test_seo_optimizer.py
